css/grayscale.scss
/* ... */
.typed-cursor {
  opacity: 1;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite;
  font-size: 110%;
}
@keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@-webkit-keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@-moz-keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.timeline {
  position: relative;
  padding: 0;
  margin-left: 0;
  padding-left: 0;
  list-style: none;
}

.timeline:before {
  content: "";
  position: absolute;
  top: 3rem;
  bottom: 1rem;
  width: 0.4375rem;
  left: 2.31rem;
  background-color: var(--background-color);
}

.timeline > li {
  position: relative;
  margin-bottom: 3.125rem;
  min-height: 3.125rem;
}

.timeline > li:before,
.timeline > li:after {
  content: " ";
  display: table;
}

.timeline > li:after {
  clear: both;
}

.timeline > li .timeline-panel {
  float: right;
  position: relative;
  width: 100%;
  padding: 0 1.25rem 0 6.25rem;
  text-align: left;
}

.timeline > li .timeline-panel:before {
  right: auto;
  left: -0.9375rem;
  border-right-width: 0.9375rem;
  border-left-width: 0;
}

.timeline > li .timeline-panel:after {
  right: auto;
  left: -0.875rem;
  border-right-width: 0.875rem;
  border-left-width: 0;
}

.timeline > li .timeline-image {
  z-index: 100;
  position: absolute;
  left: 0;
  width: 5.02rem;
  height: 5.02rem;
  border: 0.4375rem solid var(--background-color);
  border-radius: 100%;
  text-align: center;
  color: #f2f2f2;
  display: flex;
  align-items: center;
  justify-content: center;
  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 50%;
  }
}

.timeline > li .timeline-image h4 {
  margin-top: 0.75rem;
  font-size: 0.625rem;
  line-height: 0.875rem;
}

.timeline > li.timeline-inverted > .timeline-panel {
  float: right;
  padding: 0 1.25rem 0 6.25rem;
  text-align: left;
}

.timeline > li.timeline-inverted > .timeline-panel:before {
  right: auto;
  left: -0.9375rem;
  border-right-width: 0.9375rem;
  border-left-width: 0;
}

.timeline > li.timeline-inverted > .timeline-panel:after {
  right: auto;
  left: -0.875rem;
  border-right-width: 0.875rem;
  border-left-width: 0;
}

.timeline > li:last-child {
  margin-bottom: 0;
}

.timeline .timeline-heading h4 {
  margin-top: 0;
  color: inherit;
}

.timeline .timeline-heading h4.subheading {
  text-transform: none;
}

.timeline .timeline-body > p,
.timeline .timeline-body > ul {
  margin-bottom: 0;
}

@media (min-width: 768px) {
  .timeline:before {
    left: 50%;
    transform: translateX(-50%);
    width: 0.4375rem;
  }

  .timeline > li {
    margin-bottom: 6.25rem;
    min-height: 6.25rem;
  }

  .timeline > li .timeline-panel {
    float: left;
    width: 41%;
    padding: 0 1.25rem 1.25rem 1.875rem;
    text-align: right;
  }

  .timeline > li .timeline-image {
    left: 50%;
    transform: translateX(-50%);
    width: 6.25rem;
    height: 6.25rem;
  }

  .timeline > li .timeline-image h4 {
    margin-top: 1rem;
    font-size: 0.8125rem;
    line-height: 1.125rem;
  }

  header.intro .img-me {
    width: 13.13rem;
    height: 13.13rem;
  }
}

@media (min-width: 992px) {
  .timeline:before {
    width: 0.4375rem;
  }
  .timeline > li {
    min-height: 9.375rem;
  }

  .timeline > li .timeline-panel {
    padding: 0 1.25rem 1.25rem;
  }

  .timeline > li .timeline-image {
    width: 9.375rem;
    height: 9.375rem;
  }

  .timeline > li .timeline-image h4 {
    margin-top: 1.875rem;
    font-size: 1.9rem;
    line-height: 1.625rem;
  }
}

@media (min-width: 1200px) {
  .timeline > li {
    min-height: 10.625rem;
  }

  .timeline > li .timeline-panel {
    padding: 0 1.25rem 1.25rem 6.25rem;
  }

  .timeline > li .timeline-image {
    width: 9.75rem;
    height: 9.75rem;
  }

  .timeline > li .timeline-image h4 {
    margin-top: 2.5rem;
  }
}

.highlight {
  border-radius: 0.3125rem;
  overflow-x: auto;
  max-width: 80ch;
  margin: 1.5rem auto;
  padding: 1rem 1.25rem;
  hyphens: none;
  -webkit-hyphens: none;
}

// Underline links in post body prose; exclude code spans and navigation
#post .text-justify a {
  text-decoration: underline;
  text-decoration-color: var(--secondary-half);
  text-underline-offset: 0.2em;
  &:hover,
  &:focus {
    text-decoration-color: var(--secondary-dark);
  }
  code {
    text-decoration: none;
  }
}

// Theme toggle button
.theme-toggle {
  background: none;
  border: none;
  cursor: pointer;
  color: var(--font-color);
  font-size: 1.1rem;
  padding: 0.25rem 0.5rem;
  line-height: 1;
  transition: color 0.2s;
  &:hover {
    color: var(--secondary-color);
  }
}
.theme-toggle .theme-icon-dark { display: none; }
[data-theme="dark"] .theme-toggle .theme-icon-light { display: none; }
[data-theme="dark"] .theme-toggle .theme-icon-dark  { display: inline-block; }

// Cusdis comments
#cusdis_thread {
  iframe {
    width: 100% !important;
    border: none !important;
    min-height: 20rem;
  }
}

